Added kerberos check for MIT_KDC

--- a/resources/ams-cdpdc7.1.1.properties
+++ b/resources/ams-cdpdc7.1.1.properties
@@ -1,5 +1,7 @@
 echo -e "###########################################"
 
+Ambari Metrics Backup (Before Upgrading Ambari)
+
 If you are running Ambari Metrics in your cluster, put it in Maintenance Mode. Don't stop the service yet.
 
 DOWNLOAD THE PRE-UPGRADE SCRIPT
@@ -26,3 +28,13 @@ $ ./ams-pre-upgrade-2.6-to-7.x-<version>.sh
 4. Stop the service. From Ambari WebUI, browse to Services > Ambari Metrics and select Stop from the Service Actions menu.
 
 echo -e "###########################################"
+
+Reference Link : http://tiny.cloudera.com/amsbkp
+
+Ambari Metrics and SmartSense Upgrade (After Upgrading Ambari)
+
+- Stop Ambari Metrics, SmartSense
+- You will have to manually upgrade Ambari Metrics and Smart Sense.
+
+Reference Link : http://tiny.cloudera.com/ams-ss-upgrade
+
